--- a/GenerationService/appsettings.json
+++ b/GenerationService/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "Postgres": "Host=localhost;Port=5443;Database=school_db;Username=postgres;Password=52@@MS1988!!",
+        "Postgres": "Host=localhost;Port=5443;Database=school_db;Username=postgres;Password=DBPASSWORD",
         "Redis": "localhost:6379"
     },
   "Logging": {
